Phase 7: Kubernetes Deployment (k3s) — production-grade manifests
Namespace & Governance:
- ResourceQuota (20 CPU, 20Gi RAM, 100 pods)
- LimitRange (container defaults + min/max)

ConfigMaps & Secrets (dedicated files):
- API, Worker, nsjail, RabbitMQ, PostgreSQL init scripts
- Separated secrets (PG, RabbitMQ, Redis, API, Worker connections)

API Deployment:
- 3 replicas, readiness/liveness on /api/v1/health
- 256Mi/500m limits, PodDisruptionBudget (minAvailable: 2)

Worker Deployment:
- privileged securityContext for nsjail namespaces
- Tolerations for workload=untrusted:NoSchedule taint
- nodeSelector sentinel.io/role=worker, podAntiAffinity
- 1Gi/2CPU limits, nsjail config volume mounts, PDB

RabbitMQ StatefulSet:
- 3 replicas for quorum queues, Erlang clustering
- Headless + client services, prometheus metrics, PDB (min: 2)

PostgreSQL StatefulSet:
- Tuned args (shared_buffers, WAL, connections)
- Headless + client services, init scripts ConfigMap, PDB

Redis StatefulSet:
- AOF persistence, save snapshots, LRU eviction
- Headless + client services

Ingress:
- cert-manager ClusterIssuers (prod + staging Let's Encrypt)
- nginx-ingress with TLS, WebSocket upgrade, rate limiting
- Security headers (X-Frame-Options, CSP, etc.)
- Frontend Deployment (2 replicas) + Service + PDB

KEDA ScaledObject:
- Workers: queue-based (value=15, min=2, max=50)
- Scale-up: +5 pods or +100%/30s; scale-down: -2 pods/60s
- API HPA: CPU-based (min=3, max=10, target 70%)

Network Policies:
- Default deny-all ingress + egress
- Per-component rules: API ← ingress, → PG/RMQ/Redis
- Worker → PG/RMQ/Redis only (no internet)
- PG/Redis ← API+Worker only; RMQ + inter-node clustering

Infrastructure:
- Kustomize base (kustomization.yaml) for ordered apply
- scripts/setup-k3s.sh: installs k3s, Helm, nginx-ingress,
  cert-manager, KEDA, taints nodes, applies manifests
- Makefile: k8s-setup, k8s-apply, k8s-delete, k8s-status,
  k8s-logs, k8s-teardown targets
- README: K8s deployment docs, manifest t

--- a/infra/k8s/ingress.yaml
+++ b/infra/k8s/ingress.yaml
@@ -1,3 +1,47 @@
+# =============================================================================
+# Project Sentinel — Nginx Ingress + TLS + Frontend Deployment
+# =============================================================================
+# cert-manager ClusterIssuer for Let's Encrypt, WebSocket support,
+# rate limiting, CORS, and frontend serving
+# =============================================================================
+
+# ── cert-manager ClusterIssuer (Let's Encrypt) ──
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-prod
+  labels:
+    app.kubernetes.io/part-of: sentinel
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: admin@sentinel.dev           # 🔒 Replace with your email
+    privateKeySecretRef:
+      name: letsencrypt-prod-key
+    solvers:
+      - http01:
+          ingress:
+            class: nginx
+---
+# Staging issuer for testing (avoids rate limits)
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-staging
+  labels:
+    app.kubernetes.io/part-of: sentinel
+spec:
+  acme:
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    email: admin@sentinel.dev
+    privateKeySecretRef:
+      name: letsencrypt-staging-key
+    solvers:
+      - http01:
+          ingress:
+            class: nginx
+---
+# ── Ingress Resource ──
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -7,11 +51,16 @@ metadata:
     app.kubernetes.io/name: sentinel-ingress
     app.kubernetes.io/part-of: sentinel
   annotations:
-    # nginx ingress controller annotations (k3s traefik can also be used)
+    # Ingress class
     kubernetes.io/ingress.class: nginx
+    # cert-manager TLS automation
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    # Body size (code submissions)
     nginx.ingress.kubernetes.io/proxy-body-size: "1m"
+    # Timeouts
     nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
     # WebSocket support
     nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
     nginx.ingress.kubernetes.io/configuration-snippet: |
@@ -25,9 +74,20 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization, X-Request-ID"
+    # Security headers
+    nginx.ingress.kubernetes.io/server-snippet: |
+      add_header X-Frame-Options "SAMEORIGIN" always;
+      add_header X-Content-Type-Options "nosniff" always;
+      add_header X-XSS-Protection "1; mode=block" always;
+      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 spec:
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - sentinel.example.com          # 🔒 Replace with your domain
+      secretName: sentinel-tls
   rules:
-    - host: sentinel.local  # Change to your domain
+    - host: sentinel.example.com        # 🔒 Replace with your domain
       http:
         paths:
           # API routes
@@ -46,7 +106,7 @@ spec:
                 name: sentinel-api
                 port:
                   name: http
-          # Health check
+          # Health check (publicly accessible)
           - path: /health
             pathType: Exact
             backend:
@@ -54,7 +114,7 @@ spec:
                 name: sentinel-api
                 port:
                   name: http
-          # Frontend (catch-all)
+          # Frontend (catch-all — must be last)
           - path: /
             pathType: Prefix
             backend:
@@ -62,13 +122,8 @@ spec:
                 name: sentinel-frontend
                 port:
                   name: http
-  # TLS configuration (uncomment for production)
-  # tls:
-  #   - hosts:
-  #       - sentinel.local
-  #     secretName: sentinel-tls
 ---
-# Frontend Deployment & Service
+# ── Frontend Deployment ──
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -80,6 +135,12 @@ metadata:
     app.kubernetes.io/part-of: sentinel
 spec:
   replicas: 2
+  revisionHistoryLimit: 5
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app.kubernetes.io/name: sentinel-frontend
@@ -92,6 +153,7 @@ spec:
       containers:
         - name: frontend
           image: ghcr.io/harsh-bh/sentinel-frontend:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - name: http
               containerPort: 80
@@ -115,7 +177,9 @@ spec:
               port: http
             initialDelaySeconds: 3
             periodSeconds: 5
+      restartPolicy: Always
 ---
+# Frontend Service
 apiVersion: v1
 kind: Service
 metadata:
@@ -133,3 +197,18 @@ spec:
       name: http
   selector:
     app.kubernetes.io/name: sentinel-frontend
+---
+# Frontend PodDisruptionBudget
+apiVersion: policy/v1
+kind: PodDisruptionBudget
+metadata:
+  name: sentinel-frontend-pdb
+  namespace: sentinel
+  labels:
+    app.kubernetes.io/name: sentinel-frontend
+    app.kubernetes.io/component: frontend
+spec:
+  minAvailable: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: sentinel-frontend
