--- a/infra/k8s/api-deployment.yaml
+++ b/infra/k8s/api-deployment.yaml
@@ -1,3 +1,8 @@
+# =============================================================================
+# Project Sentinel — API Gateway Deployment
+# =============================================================================
+# 3 replicas, readiness/liveness on /api/v1/health, envFrom ConfigMap+Secret
+# =============================================================================
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -8,7 +13,13 @@ metadata:
     app.kubernetes.io/component: api
     app.kubernetes.io/part-of: sentinel
 spec:
-  replicas: 2
+  replicas: 3
+  revisionHistoryLimit: 5
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app.kubernetes.io/name: sentinel-api
@@ -23,9 +34,11 @@ spec:
         prometheus.io/path: "/metrics"
     spec:
       serviceAccountName: sentinel-api
+      terminationGracePeriodSeconds: 30
       containers:
         - name: api
           image: ghcr.io/harsh-bh/sentinel-api:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - name: http
               containerPort: 8080
@@ -44,7 +57,7 @@ spec:
               memory: 256Mi
           livenessProbe:
             httpGet:
-              path: /health
+              path: /api/v1/health
               port: http
             initialDelaySeconds: 10
             periodSeconds: 15
@@ -52,7 +65,7 @@ spec:
             failureThreshold: 3
           readinessProbe:
             httpGet:
-              path: /health
+              path: /api/v1/health
               port: http
             initialDelaySeconds: 5
             periodSeconds: 10
@@ -60,11 +73,11 @@ spec:
             failureThreshold: 3
           startupProbe:
             httpGet:
-              path: /health
+              path: /api/v1/health
               port: http
             initialDelaySeconds: 5
             periodSeconds: 5
-            failureThreshold: 10
+            failureThreshold: 12
       restartPolicy: Always
 ---
 apiVersion: v1
@@ -93,27 +106,17 @@ metadata:
   labels:
     app.kubernetes.io/name: sentinel-api
 ---
-apiVersion: v1
-kind: ConfigMap
+# PodDisruptionBudget — at least 2 API pods always available
+apiVersion: policy/v1
+kind: PodDisruptionBudget
 metadata:
-  name: sentinel-api-config
+  name: sentinel-api-pdb
   namespace: sentinel
-data:
-  SERVER_PORT: "8080"
-  SERVER_MODE: "release"
-  RABBITMQ_EXCHANGE: "sentinel.direct"
-  RABBITMQ_ROUTING_KEY: "execution_tasks"
-  RABBITMQ_QUEUE: "execution_tasks"
-  REDIS_DB: "0"
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: sentinel-api-secrets
-  namespace: sentinel
-type: Opaque
-stringData:
-  # Replace with actual values or use sealed-secrets / external-secrets
-  DATABASE_URL: "postgres://sentinel:changeme@sentinel-postgres:5432/sentinel_db?sslmode=disable"
-  RABBITMQ_URL: "amqp://sentinel:changeme@sentinel-rabbitmq:5672/"
-  REDIS_URL: "redis://sentinel-redis:6379/0"
+  labels:
+    app.kubernetes.io/name: sentinel-api
+    app.kubernetes.io/component: api
+spec:
+  minAvailable: 2
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: sentinel-api
