--- a/infra/k8s/worker-deployment.yaml
+++ b/infra/k8s/worker-deployment.yaml
@@ -1,3 +1,8 @@
+# =============================================================================
+# Project Sentinel — Execution Worker Deployment
+# =============================================================================
+# Privileged pods (nsjail), tolerate untrusted taint, KEDA-managed replicas
+# =============================================================================
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -8,7 +13,14 @@ metadata:
     app.kubernetes.io/component: worker
     app.kubernetes.io/part-of: sentinel
 spec:
+  # KEDA manages replicas (min=2, max=50) — this is the initial count
   replicas: 2
+  revisionHistoryLimit: 5
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 2
+      maxUnavailable: 0
   selector:
     matchLabels:
       app.kubernetes.io/name: sentinel-worker
@@ -23,16 +35,34 @@ spec:
         prometheus.io/path: "/metrics"
     spec:
       serviceAccountName: sentinel-worker
+      terminationGracePeriodSeconds: 60
       # Worker needs elevated privileges for nsjail (namespaces, cgroups)
       securityContext:
-        # nsjail needs CAP_SYS_ADMIN for clone(CLONE_NEWUSER|NEWPID|etc)
-        # In production, use a more fine-grained approach with AppArmor/SELinux
         runAsNonRoot: false
+      # Schedule only on nodes tainted for untrusted workloads
+      tolerations:
+        - key: workload
+          operator: Equal
+          value: untrusted
+          effect: NoSchedule
+      nodeSelector:
+        sentinel.io/role: worker
+      # Prefer spreading across nodes
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    app.kubernetes.io/name: sentinel-worker
+                topologyKey: kubernetes.io/hostname
       containers:
         - name: worker
           image: ghcr.io/harsh-bh/sentinel-worker:latest
+          imagePullPolicy: IfNotPresent
           ports:
-            - name: metrics
+            - name: health
               containerPort: 9090
               protocol: TCP
           envFrom:
@@ -42,13 +72,13 @@ spec:
                 name: sentinel-worker-secrets
           resources:
             requests:
-              cpu: 250m
+              cpu: 500m
               memory: 512Mi
             limits:
               cpu: "2"
               memory: 1Gi
           securityContext:
-            privileged: true  # Required for nsjail namespace creation
+            privileged: true     # Required for nsjail namespace creation
           volumeMounts:
             - name: nsjail-config
               mountPath: /etc/nsjail
@@ -57,20 +87,27 @@ spec:
               mountPath: /tmp/sentinel
           livenessProbe:
             httpGet:
-              path: /metrics
-              port: metrics
+              path: /healthz
+              port: health
             initialDelaySeconds: 15
             periodSeconds: 20
             timeoutSeconds: 5
             failureThreshold: 3
           readinessProbe:
             httpGet:
-              path: /metrics
-              port: metrics
+              path: /healthz
+              port: health
             initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 3
             failureThreshold: 3
+          startupProbe:
+            httpGet:
+              path: /healthz
+              port: health
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            failureThreshold: 12
       volumes:
         - name: nsjail-config
           configMap:
@@ -92,9 +129,9 @@ spec:
   type: ClusterIP
   ports:
     - port: 9090
-      targetPort: metrics
+      targetPort: health
       protocol: TCP
-      name: metrics
+      name: health
   selector:
     app.kubernetes.io/name: sentinel-worker
 ---
@@ -106,29 +143,17 @@ metadata:
   labels:
     app.kubernetes.io/name: sentinel-worker
 ---
-apiVersion: v1
-kind: ConfigMap
+# PodDisruptionBudget — keep at least 1 worker running during disruptions
+apiVersion: policy/v1
+kind: PodDisruptionBudget
 metadata:
-  name: sentinel-worker-config
+  name: sentinel-worker-pdb
   namespace: sentinel
-data:
-  WORKER_POOL_SIZE: "4"
-  NSJAIL_PATH: "/usr/bin/nsjail"
-  NSJAIL_PYTHON_CONFIG: "/etc/nsjail/python.cfg"
-  NSJAIL_CPP_CONFIG: "/etc/nsjail/cpp.cfg"
-  EXECUTION_TIMEOUT: "10s"
-  EXECUTION_MAX_OUTPUT: "65536"
-  METRICS_PORT: "9090"
-  RABBITMQ_QUEUE: "execution_tasks"
-  RABBITMQ_PREFETCH: "1"
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: sentinel-worker-secrets
-  namespace: sentinel
-type: Opaque
-stringData:
-  DATABASE_URL: "postgres://sentinel:changeme@sentinel-postgres:5432/sentinel_db?sslmode=disable"
-  RABBITMQ_URL: "amqp://sentinel:changeme@sentinel-rabbitmq:5672/"
-  REDIS_URL: "redis://sentinel-redis:6379/0"
+  labels:
+    app.kubernetes.io/name: sentinel-worker
+    app.kubernetes.io/component: worker
+spec:
+  minAvailable: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: sentinel-worker
