Phase 8: Observability — Prometheus + Grafana monitoring stack
Kubernetes monitoring stack (infra/k8s/monitoring/):
- Prometheus: Deployment, PVC (10Gi), Service, RBAC, ConfigMap
  - Scrape configs: API, Worker, RabbitMQ, postgres-exporter, nodes
  - 15d retention, 8GB TSDB limit, lifecycle API enabled
- Grafana: Deployment, PVC (2Gi), Service
  - Auto-provisioned Prometheus datasource
  - 3 dashboards: Sentinel Overview, Worker Health, Infrastructure
- Alerting rules (4 alerts):
  - SentinelQueueBacklog (>1000 msgs, 5m)
  - SentinelWorkerDown (<1 active, 3m)
  - SentinelHighErrorRate (>10%, 5m)
  - SentinelSandboxFailures (>50 in 5m)
- PostgreSQL exporter: Deployment + Service (auto-discover databases)
- Network policies: Prometheus scrape, Grafana→Prometheus, PG exporter→PG
- Separate kustomization (kubectl apply -k infra/k8s/monitoring/)

Docker Compose observability (infra/monitoring/):
- Prometheus service (host port 9091)
- Grafana service (host port 3001, admin/sentinel)
- Shared alerting rules and provisioning configs

Updated:
- docker-compose.yml: +2 services (prometheus, grafana), +2 volumes
- Makefile: monitoring-up/down/status, k8s-monitoring-* targets
- README.md: Observability docs, metrics table, dashboards, alerts
- Phase 8 marked ✅ in roadmap

--- a/infra/k8s/kustomization.yaml
+++ b/infra/k8s/kustomization.yaml
@@ -40,3 +40,7 @@ resources:
 
   # 7. Network Policies
   - network-policies.yaml
+
+# NOTE: Monitoring stack (infra/k8s/monitoring/) uses its own kustomization
+# with a separate namespace. Apply separately:
+#   kubectl apply -k infra/k8s/monitoring/
