--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -166,6 +166,62 @@ services:
     networks:
       - sentinel
 
+  # ────────────── Prometheus ──────────────
+  prometheus:
+    image: prom/prometheus:v2.53.0
+    container_name: sentinel-prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--storage.tsdb.retention.time=7d"
+      - "--web.enable-lifecycle"
+    ports:
+      - "9091:9090"    # host 9091 to avoid clash with worker metrics on 9090
+    volumes:
+      - ./infra/monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./infra/monitoring/alerts.yml:/etc/prometheus/rules/alerts.yml:ro
+      - promdata:/prometheus
+    depends_on:
+      api:
+        condition: service_healthy
+      worker:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:9090/-/healthy"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
+    networks:
+      - sentinel
+
+  # ────────────── Grafana ──────────────
+  grafana:
+    image: grafana/grafana:11.1.0
+    container_name: sentinel-grafana
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: sentinel
+      GF_USERS_ALLOW_SIGN_UP: "false"
+    ports:
+      - "3001:3000"    # host 3001 to avoid clash with frontend on 3000
+    volumes:
+      - ./infra/monitoring/grafana/provisioning:/etc/grafana/provisioning:ro
+      - grafanadata:/var/lib/grafana
+    depends_on:
+      prometheus:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3000/api/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
+    restart: unless-stopped
+    networks:
+      - sentinel
+
 # ────────────── Volumes ──────────────
 volumes:
   pgdata:
@@ -173,6 +229,10 @@ volumes:
   rabbitmqdata:
     driver: local
   redisdata:
+    driver: local
+  promdata:
+    driver: local
+  grafanadata:
     driver: local
 
 # ────────────── Networks ──────────────
